<resources>
    <string name="app_name">Recordatorios y alarmas UX</string>
    <!--Pagina de inicio-->
    <string name="title">Recordatorios y alarmas</string>
    <string name="main_text">Bienvenido a la aplicación recordatorios y alarmas, una herramienta que lo ayudará en sus actividades, tareas y obligaciones diarias brindandole recordatorios y alarmas que lo ayuden a organizar y gestionar su tiempo.</string>
    <string name="button_sigin">Iniciar sesión</string>
    <string name="button_guest">Iniciar como invitado</string>

    <!--Listado de alarmas-->
    <string name="title2">Listado de alarmas</string>
    <string name="button_add">Crear</string>
    <string name="item1_type">Gimnasio</string>
    <string name="item1_hour">5:00 a.m.</string>
    <string name="item1_days">Lun, mie, vie</string>
    <string name="item2_type">Laboral</string>
    <string name="item2_hour">6:30 a.m.</string>
    <string name="item2_days">Lun, mar, mie, jue, vie</string>

    <!--Crear alarma-->
    <string name="title3">Crear alarma</string>
    <string name="lblCategoria">Categoria</string>
    <string name="txtCategoria">Gimnasio</string>
    <string name="lblFrecuencia">Frecuencia</string>
    <string name="txtDefecto">Solo una vez</string>
    <string name="lblRecordarme">Recordarme más tarde</string>
    <string name="txtRecordarme">10 minutos</string>

    <!--Pagina login-->
    <string name="btn_login">Ingresar</string>
    <string name="lblEmail">Email</string>
    <string name="ht_email">Ingrese su email</string>
    <string name="lblClave">Clave</string>
    <string name="ht_clave">Ingrese su clave de acceso</string>
    <string name="lblRecuperaClave">Recuperar mi clave</string>

    <!--Pagina menu-->
    <string name="btn_alarma">Alarmas</string>
    <string name="btn_configura">Configuraciones</string>

    <!--Editar alarma-->
    <string name="lblFuncion">Editar alarma</string>
    <string name="lblEditarCategoria">Categoria</string>
    <string name="txtEditarCategoria">Gimnasio</string>
    <string name="lblEditarFrecuencia">Frecuencia</string>
    <string name="txtEditarDefecto">Solo una vez</string>
    <string name="lblEditarRecordarme">Recordarme más tarde</string>
    <string name="txtEditarRecordarme">5 minutos</string>
</resources>