<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_editar_alarma">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/EditarAlarma"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/Inferior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblFuncion"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgLogo"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/btnCancelar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/fondobotonesbanner"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            tools:layout_editor_absoluteY="16dp" />

        <ImageButton
            android:id="@+id/btnGuardar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/fondobotonesbanner"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="?android:attr/textCheckMarkInverse"
            tools:layout_editor_absoluteY="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/Inferior"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TimePicker
            android:id="@+id/tpHour"
            android:layout_width="match_parent"
            android:layout_height="355dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:contextClickable="false"
            android:forceHasOverlappingRendering="false"
            android:headerBackground="@color/prussian_blue"
            android:numbersBackgroundColor="@color/gray_1"
            android:numbersSelectorColor="@color/prussian_blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:overScrollMode="ifContentScrolls">

            <LinearLayout
                android:id="@+id/llCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtCategoria"
                    android:layout_width="60dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:text="@string/lblEditarCategoria"
                    android:textAlignment="viewStart" />

                <AutoCompleteTextView
                    android:id="@+id/atvCategoria"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:text="@string/txtEditarCategoria"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llFrecuencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtFrecuencia"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/lblEditarFrecuencia" />

                <TextView
                    android:id="@+id/tvFrecuencia"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:elevation="50dp"
                    android:text="@string/txtEditarDefecto"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtRecordarme"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/lblEditarRecordarme" />

                <TextView
                    android:id="@+id/tvRecordarme"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="@string/txtEditarRecordarme" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>