<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvHour"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    android:textAlignment="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/fondoalarmitem"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtHour"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/item1_hour"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txtDays"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/item1_days"
                            android:textAlignment="center" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/swActiva"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginEnd="25dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:switchMinWidth="60dp"
                    android:text="@string/item1_type"
                    android:thumbTint="@color/white"
                    android:trackTint="@color/prussian_blue"
                    android:visibility="visible"
                    tools:visibility="visible" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <!--<androidx.cardview.widget.CardView
            android:id="@+id/cvItem2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvHour2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="25dp"
                    android:layout_weight="1"
                    android:textAlignment="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/fondoalarmitem"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtHour2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/item2_hour"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/txtDays2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/item2_days"
                            android:textAlignment="center" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/swActiva2"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginEnd="25dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:switchMinWidth="60dp"
                    android:text="@string/item2_type"
                    android:thumbTint="@color/white"
                    android:trackTint="@color/prussian_blue"
                    android:visibility="visible" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>-->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>